--- a/style.css
+++ b/style.css
@@ -79,4 +79,26 @@
   ul li button:hover {
     background: #ffd02c;
   }
+  .duelo {
+    display: flex;
+    gap: 1rem;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  
+  .chiste-box {
+    border: 2px dashed #aaa;
+    padding: 1rem;
+    width: 45%;
+    min-width: 250px;
+    background: #f0f0f0;
+    border-radius: 10px;
+  }
+  
+  .resultados {
+    text-align: center;
+    margin-top: 1rem;
+    font-weight: bold;
+  }
+  
   
